# ojbx

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
.github/workflows/: build-all.yml
cmake/: clang-tools.cmake  cmake-plugins.cmake  flags-coverage.cmake  flags.cmake  setup_compiler.cmake  simple_target.cmake  testing.cmake
cmake/vcpkg/: gcc-14-toolchain.cmake  gcc-14.cmake
fbs/: CMakeLists.txt  objectbox-model.json
